objects/PMC_ErrorLog__c.object
<CustomObject>
    <fields>
        <fullName>PMC_AdditionalSerializedObject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Serialized Object</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_ClassName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_DocuSign_Record_Id__c</fullName>
        <description>to capture the DocuSign record id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PMC_DocuSign_Record_Id</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_ExternalId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_FlowName__c</fullName>
        <description>Field to store Flow Name.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_MethodName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SerializedClass__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Serialized Class</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_StackTrace__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_Submitted_By__c</fullName>
        <description>Docusign record submitted by id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PMC_Submitted_By</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_Type__c</fullName>
        <description>Field to store Type of Error.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_Workflow_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Workflow Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_Workflow_Stage_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Workflow Stage Name</label>
        <type>TextArea</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>PMC_Message__c</columns>
        <columns>PMC_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mosaic_Direct_Error_Log_List_View</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PMC_StackTrace__c</columns>
        <columns>PMC_Message__c</columns>
        <columns>PMC_ClassName__c</columns>
        <columns>PMC_MethodName__c</columns>
        <columns>PMC_Type__c</columns>
        <columns>PMC_SerializedClass__c</columns>
        <filterScope>Everything</filterScope>
        <label>Mosaic Direct Error Log List View</label>
    </listViews>
    <listViews>
        <fullName>PMC_DH_ErrorLogsListView</fullName>
        <columns>NAME</columns>
        <columns>PMC_ClassName__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>PMC DH Error Logs List View</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Error Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>